--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="div_img"></div>
     <div class="div_text">
         <h1 class="about_h">We always make sure to provide you with good food</h1>
-        <p class="about_p">Don’t miss a thing! Subscribe to our newsletter</p>
+        <p class="about_p">Don't miss a thing! Subscribe to our newsletter</p>
         <h4 class="about_h4">Follow Us On</h4>
         <ul class="_about_ul_logo">
             <li><img  src="https://img.icons8.com/color/48/facebook-new.png" alt="facebook-new"/></li>
