change some style

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 class="card_fi_h">Your Favorite Brands Food Are Now On Sale</h1>
             <div class="card_flex">
                 <div>
-                    <div class="card_img"><img src="/assets/burger.png" alt=""></div>
+                    <div class="card_img"><img src="./assets/burger.png" alt=""></div>
                    <div class="card_info">
                     <div>      <button class="btn_sec"> Barger King</button></div>
                     <h1 class="card_se_h">Up To 50% Off</h1>
@@ -34,7 +34,7 @@
                     
                 </div>
                 <div>
-                    <div class="card_img"><img src="/assets/biriyani.png" alt=""></div>
+                    <div class="card_img"><img src="./assets/biriyani.png" alt=""></div>
                    <div class="card_info">
                     <div>      <button class="btn_sec"> Kacchi Bhai</button></div>
                     <h1 class="card_se_h">Up To 50% Off</h1>
@@ -43,7 +43,7 @@
                     
                 </div>
                 <div>
-                    <div class="card_img"><img src="/assets/pizza.png" alt=""></div>
+                    <div class="card_img"><img src="./assets/pizza.png" alt=""></div>
                    <div class="card_info">
                     <div>      <button class="btn_sec"> Pizza Burg</button></div>
                     <h1 class="card_se_h">Up To 50% Off</h1>
